manifests/jellyfin/sfs-jellyfin.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jellyfin
  namespace: jellyfin
  labels:
    app.kubernetes.io/managed-by: argocd
    app.kubernetes.io/name: jellyfin
    app.kubernetes.io/version: v10.10.6
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: jellyfin
  serviceName: jellyfin-pods
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jellyfin
    spec:
      containers:
        - name: jellyfin
          image: ghcr.io/jellyfin/jellyfin:10.10.6
          ports:
            - name: jellyfin
              containerPort: 8096
          livenessProbe:
            httpGet: &healthPage
              port: jellyfin
              scheme: HTTP
              path: /health
            failureThreshold: 1
            periodSeconds: 10
          readinessProbe:
            httpGet: *healthPage
            periodSeconds: 10
          startupProbe:
            httpGet: *healthPage
            failureThreshold: 10
            periodSeconds: 5
          volumeMounts:
            - name: config
              mountPath: /config
            - name: cache
              mountPath: /cache
            - name: media
              mountPath: /media
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        accessModes: [ReadWriteOnce]
        resources:
          requests:
            storage: 1Gi
    - metadata:
        name: cache
      spec:
        accessModes: [ReadWriteOnce]
        resources:
          requests:
            storage: 5Gi
    - metadata:
        name: media
      spec:
        accessModes: [ReadWriteOnce]
        resources:
          requests:
            storage: 20Gi
