manifests/jellyfin/ing-jellyfin-tailscale.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin-tailscale
  namespace: jellyfin
  annotations:
    tailscale.com/tags: "tag:jellyfin,tag:k8s"
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: jellyfin
      port:
        name: http
  tls:
    - hosts:
        - jellyfin
        - jellyfin.takaya-map.ts.net
